--- a/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightPBRExtraPasses.template
+++ b/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightPBRExtraPasses.template
@@ -1,72 +1,73 @@
 Pass
 {
-    Tags{"LightMode" = "ShadowCaster"}
+	Tags{"LightMode" = "ShadowCaster"}
 
-    ZWrite On
-    ZTest LEqual
-    Cull ${Culling}
+	ZWrite On
+	ZTest LEqual
+	Cull ${Culling}
 
-    HLSLPROGRAM
-    // Required to compile gles 2.0 with standard srp library
-    #pragma prefer_hlslcc gles
-    #pragma target 2.0
-    
-    //--------------------------------------
-    // GPU Instancing
-    #pragma multi_compile_instancing
+	HLSLPROGRAM
+	// Required to compile gles 2.0 with standard srp library
+	#pragma prefer_hlslcc gles
+	#pragma target 2.0
 
-    #pragma vertex ShadowPassVertex
-    #pragma fragment LitPassFragmentNull
+	//--------------------------------------
+	// GPU Instancing
+	#pragma multi_compile_instancing
 
-    #include "LWRP/ShaderLibrary/LightweightPassShadow.hlsl"
-    ENDHLSL
+	#pragma vertex ShadowPassVertex
+	#pragma fragment ShadowPassFragment
+
+	#include "LWRP/ShaderLibrary/LightweightPassShadow.hlsl"
+
+	ENDHLSL
 }
 
 Pass
 {
-    Tags{"LightMode" = "DepthOnly"}
+	Tags{"LightMode" = "DepthOnly"}
 
-    ZWrite On
-    ColorMask 0
+	ZWrite On
+	ColorMask 0
 
-    HLSLPROGRAM
-    // Required to compile gles 2.0 with standard srp library
-    #pragma prefer_hlslcc gles
-    #pragma target 2.0
-    
-    //--------------------------------------
-    // GPU Instancing
-    #pragma multi_compile_instancing
+	HLSLPROGRAM
+	// Required to compile gles 2.0 with standard srp library
+	#pragma prefer_hlslcc gles
+	#pragma target 2.0
 
-    #pragma vertex LitPassVertex
-    #pragma fragment LitPassFragmentNull
+	#pragma vertex DepthOnlyVertex
+	#pragma fragment DepthOnlyFragment
 
-    #include "LWRP/ShaderLibrary/LightweightPassLit.hlsl"
-    ENDHLSL
+	//--------------------------------------
+	// GPU Instancing
+	#pragma multi_compile_instancing
+
+	#include "LWRP/ShaderLibrary/LightweightPassDepthOnly.hlsl"
+	ENDHLSL
 }
 
 // This pass it not used during regular rendering, only for lightmap baking.
 Pass
 {
-    Tags{"LightMode" = "Meta"}
+	Tags{"LightMode" = "Meta"}
 
-    Cull Off
+	Cull Off
 
-    HLSLPROGRAM
-    // Required to compile gles 2.0 with standard srp library
-    #pragma prefer_hlslcc gles
+	HLSLPROGRAM
+	// Required to compile gles 2.0 with standard srp library
+	#pragma prefer_hlslcc gles
 
-    #pragma vertex LightweightVertexMeta
-    #pragma fragment LightweightFragmentMeta
+	#pragma vertex LightweightVertexMeta
+	#pragma fragment LightweightFragmentMeta
 
-    #pragma shader_feature _SPECULAR_SETUP
-    #pragma shader_feature _EMISSION
-    #pragma shader_feature _METALLICSPECGLOSSMAP
-    #pragma shader_feature _ _SMOOTHNESS_TEXTURE_ALBEDO_CHANNEL_A
-    #pragma shader_feature EDITOR_VISUALIZATION
+	#pragma shader_feature _SPECULAR_SETUP
+	#pragma shader_feature _EMISSION
+	#pragma shader_feature _METALLICSPECGLOSSMAP
+	#pragma shader_feature _ _SMOOTHNESS_TEXTURE_ALBEDO_CHANNEL_A
+	#pragma shader_feature EDITOR_VISUALIZATION
 
-    #pragma shader_feature _SPECGLOSSMAP
+	#pragma shader_feature _SPECGLOSSMAP
 
-    #include "LWRP/ShaderLibrary/LightweightPassMeta.hlsl"
-    ENDHLSL
+	#include "LWRP/ShaderLibrary/LightweightPassMeta.hlsl"
+	ENDHLSL
 }
