--- a/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightUnlitExtraPasses.template
+++ b/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightUnlitExtraPasses.template
@@ -1,46 +1,47 @@
 Pass
 {
-    Tags{"LightMode" = "ShadowCaster"}
+	Tags{"LightMode" = "ShadowCaster"}
 
-    ZWrite On
-    ZTest LEqual
-    Cull ${Culling}
+	ZWrite On
+	ZTest LEqual
+	Cull ${Culling}
 
-    HLSLPROGRAM
-    // Required to compile gles 2.0 with standard srp library
-    #pragma prefer_hlslcc gles
-    #pragma target 2.0
-    
-    //--------------------------------------
-    // GPU Instancing
-    #pragma multi_compile_instancing
+	HLSLPROGRAM
+	// Required to compile gles 2.0 with standard srp library
+	#pragma prefer_hlslcc gles
+	#pragma target 2.0
 
-    #pragma vertex ShadowPassVertex
-    #pragma fragment LitPassFragmentNull
+	//--------------------------------------
+	// GPU Instancing
+	#pragma multi_compile_instancing
 
-    #include "LWRP/ShaderLibrary/LightweightPassShadow.hlsl"
-    ENDHLSL
+	#pragma vertex ShadowPassVertex
+	#pragma fragment ShadowPassFragment
+
+	#include "LWRP/ShaderLibrary/LightweightPassShadow.hlsl"
+
+	ENDHLSL
 }
 
 Pass
 {
-    Tags{"LightMode" = "DepthOnly"}
+	Tags{"LightMode" = "DepthOnly"}
 
-    ZWrite On
-    ColorMask 0
+	ZWrite On
+	ColorMask 0
 
-    HLSLPROGRAM
-    // Required to compile gles 2.0 with standard srp library
-    #pragma prefer_hlslcc gles
-    #pragma target 2.0
-    
-    //--------------------------------------
-    // GPU Instancing
-    #pragma multi_compile_instancing
+	HLSLPROGRAM
+	// Required to compile gles 2.0 with standard srp library
+	#pragma prefer_hlslcc gles
+	#pragma target 2.0
 
-    #pragma vertex LitPassVertex
-    #pragma fragment LitPassFragmentNull
+	#pragma vertex DepthOnlyVertex
+	#pragma fragment DepthOnlyFragment
 
-    #include "LWRP/ShaderLibrary/LightweightPassLit.hlsl"
-    ENDHLSL
+	//--------------------------------------
+	// GPU Instancing
+	#pragma multi_compile_instancing
+
+	#include "LWRP/ShaderLibrary/LightweightPassDepthOnly.hlsl"
+	ENDHLSL
 }
