--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "Tests/UTF_Core"]
 	path = Tests/UTF_Core
 	url = git@github.com:Unity-Technologies/UTF_Core.git
+[submodule "Tests/UTF_HDRP"]
+	path = Tests/UTF_HDRP
+	url = git@github.com:Unity-Technologies/UTF_Tests_HDRP.git
