--- a/.gitmodules
+++ b/.gitmodules
@@ -8,6 +8,8 @@
 [submodule "Tests/UTF_Core"]
 	path = Tests/UTF_Core
 	url = git@github.com:Unity-Technologies/UTF_Core.git
-[submodule "Tests/UTF_HDRP"]
-	path = Tests/UTF_HDRP
+[submodule "Tests/UTF_Tests_HDRP"]
+
+	path = Tests/UTF_Tests_HDRP
+
 	url = git@github.com:Unity-Technologies/UTF_Tests_HDRP.git
