--- a/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightUnlitExtraPasses.template
+++ b/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightUnlitExtraPasses.template
@@ -18,6 +18,7 @@ Pass
 	#pragma vertex ShadowPassVertex
 	#pragma fragment ShadowPassFragment
 
+	#include "LWRP/ShaderLibrary/InputSurfaceUnlit.hlsl"
 	#include "LWRP/ShaderLibrary/LightweightPassShadow.hlsl"
 
 	ENDHLSL
@@ -42,6 +43,7 @@ Pass
 	// GPU Instancing
 	#pragma multi_compile_instancing
 
+	#include "LWRP/ShaderLibrary/InputSurfaceUnlit.hlsl"
 	#include "LWRP/ShaderLibrary/LightweightPassDepthOnly.hlsl"
 	ENDHLSL
 }
