--- a/Assets/VFXShaders/VFXUpdate.template
+++ b/Assets/VFXShaders/VFXUpdate.template
@@ -57,6 +57,9 @@ void CSMain(uint3 id : SV_DispatchThreadID, uint3 groupId : SV_GroupThreadID)
 		
 		${VFXProcessBlocks}
 		${VFXStoreAttributes}
+#if VFX_HAS_INDIRECT_DRAW
+		indirectBuffer.Append(index);
+#endif
 #endif
 	}
 }
