--- a/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightPBRExtraPasses.template
+++ b/ScriptableRenderPipeline/LightweightPipeline/LWRP/Editor/ShaderGraph/lightweightPBRExtraPasses.template
@@ -9,7 +9,12 @@ Pass
 	HLSLPROGRAM
 	// Required to compile gles 2.0 with standard srp library
 	#pragma prefer_hlslcc gles
+	#pragma exclude_renderers d3d11_9x
 	#pragma target 2.0
+
+	// -------------------------------------
+	// Material Keywords
+	#pragma shader_feature _ALPHATEST_ON
 
 	//--------------------------------------
 	// GPU Instancing
@@ -29,6 +34,7 @@ Pass
 
 	ZWrite On
 	ColorMask 0
+	Cull ${Culling}
 
 	HLSLPROGRAM
 	// Required to compile gles 2.0 with standard srp library
@@ -37,6 +43,10 @@ Pass
 
 	#pragma vertex DepthOnlyVertex
 	#pragma fragment DepthOnlyFragment
+
+	// -------------------------------------
+	// Material Keywords
+	#pragma shader_feature _ALPHATEST_ON
 
 	//--------------------------------------
 	// GPU Instancing
