--- a/Assets/VFXShaders/VFXCameraSort.template
+++ b/Assets/VFXShaders/VFXCameraSort.template
@@ -13,7 +13,9 @@ CBUFFER_END
 ByteAddressBuffer attributeBuffer;
 StructuredBuffer<uint> inputBuffer;
 
+#if USE_DEAD_LIST_COUNT
 Buffer<uint> deadListCount;
+#endif
 
 struct Kvp
 {
@@ -26,7 +28,11 @@ RWStructuredBuffer<Kvp> outputBuffer;
 [numthreads(NB_THREADS_PER_GROUP,1,1)]
 void CSMain(uint3 id : SV_DispatchThreadID)
 {
-	if (id.x < nbMax - deadListCount[0])	
+	uint threshold = nbMax;
+#if USE_DEAD_LIST_COUNT
+	threshold -= deadListCount[0];
+#endif	
+	if (id.x < threshold)
 	{
 		uint index = inputBuffer[id.x];
 		${VFXLoadAttributes:{position}}
