--- a/Assets/VFXShaders/ParticlePoints/Pass.template
+++ b/Assets/VFXShaders/ParticlePoints/Pass.template
@@ -7,28 +7,19 @@
 VFX_VARYING_PS_INPUTS vert(uint id : SV_VertexID, uint instanceID : SV_InstanceID)
 {
 	uint index = id;
-#if VFX_HAS_INDIRECT_DRAW
-	index = indirectBuffer[index];
-#endif
 	VFX_VARYING_PS_INPUTS o = (VFX_VARYING_PS_INPUTS)0;
-	o.VFX_VARYING_POSCS = -1;
-	if (index < asuint(nbMax))
-	{
-		${VFXLoadAttributes:{alive}}
-		if (alive)
-		{
-			${VFXLoadAttributes:{(?!(alive))(\b\w)}}
-			${VFXProcessBlocks}
+	
+	${VFXLoadAttributesOrCull}
+	${VFXProcessBlocks}
 			
-			if (!alive)
-				return o;
-							
-			o.VFX_VARYING_POSCS = TransformPositionVFXToClip(position);
+	if (!alive)
+		return o;
+					
+	o.VFX_VARYING_POSCS = TransformPositionVFXToClip(position);
 
-			${VFXVertexCommonProcess}
-			${VFXVertexAdditionalProcess}
-		}
-	}
+	${VFXVertexCommonProcess}
+	${VFXVertexAdditionalProcess}
+			
 	return o;
 }
 
