SW line renderer

--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/VFXParticleCommon.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/VFXParticleCommon.template
@@ -12,8 +12,8 @@ ${VFXLoadParameter:{invSoftParticlesFadeDistance}}
 o.VFX_VARYING_INVSOFTPARTICLEFADEDISTANCE = invSoftParticlesFadeDistance;
 #endif
 
-#if (VFX_NEEDS_POSSS || USE_SOFT_PARTICLE) && defined(VFX_VARYING_POSSS)
-o.VFX_VARYING_POSSS = VFXGetPOSSS(o.pos);
+#if (VFX_NEEDS_POSSS || USE_SOFT_PARTICLE) && defined(VFX_VARYING_POSSS) && defined(VFX_VARYING_POSCS)
+o.VFX_VARYING_POSSS = VFXGetPOSSS(o.VFX_VARYING_POSCS);
 #endif
 
 #if USE_ALPHA_TEST && defined(VFX_VARYING_ALPHATHRESHOLD)
