--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleLinesSW/PassForward.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleLinesSW/PassForward.template
@@ -9,14 +9,17 @@ Pass
 	struct ps_input
 	{
 		float4 pos : SV_POSITION;
+		#if IS_TRANSPARENT_PARTICLE
+		float pixelOffset : TEXCOORD0; // for AA
+		#endif
 		#if VFX_NEEDS_COLOR_INTERPOLATOR
 		nointerpolation float4 color : COLOR0;
 		#endif
 		#if USE_SOFT_PARTICLE || USE_ALPHA_TEST
-		nointerpolation float2 builtInInterpolants : TEXCOORD0;
+		nointerpolation float2 builtInInterpolants : TEXCOORD1;
 		#endif
 		#if USE_SOFT_PARTICLE
-		float4 projPos : TEXCOORD1;		
+		float4 projPos : TEXCOORD2;		
 		#endif
 	};
 	
@@ -32,6 +35,9 @@ Pass
 #define VFX_VARYING_ALPHA color.a
 #define VFX_VARYING_INVSOFTPARTICLEFADEDISTANCE builtInInterpolants.x
 #define VFX_VARYING_ALPHATHRESHOLD builtInInterpolants.y
+#if IS_TRANSPARENT_PARTICLE
+#define VFX_VARYING_PIXELOFFSET pixelOffset
+#endif
 	
 	${VFXInclude("Assets/VFXEditor/Shaders/ParticleLinesSW/Pass.template")}	
 		
@@ -40,6 +46,12 @@ Pass
 	{
 		ps_output o = (ps_output)0;
 		o.color = VFXGetFragmentColor(i);
+		
+		// Line AA
+		#if IS_TRANSPARENT_PARTICLE	
+		o.color.a *= 1.0f - abs(i.pixelOffset);
+		#endif
+		
 		VFXClipFragmentColor(o.color.a,i);
 		return o;
 	}
