--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticlePoints/PassShadowCaster.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticlePoints/PassShadowCaster.template
@@ -23,7 +23,7 @@ Pass
 #define VFX_VARYING_ALPHATHRESHOLD builtInInterpolants.y
 	
 ${VFXBegin:VFXVertexAdditionalProcess}
-	o.pos = UnityApplyLinearShadowBias(o.pos);
+o.pos = VFXApplyShadowBias(o.pos);
 ${VFXEnd}
 
 	${VFXInclude("Assets/VFXEditor/Shaders/ParticlePoints/Pass.template")}	
