--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleLines/PassShadowCaster.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleLines/PassShadowCaster.template
@@ -22,9 +22,9 @@ Pass
 #define VFX_VARYING_ALPHA builtInInterpolants.y
 #define VFX_VARYING_ALPHATHRESHOLD builtInInterpolants.x
 		
-	${VFXBegin:VFXVertexAdditionalProcess}
-		o.pos = UnityApplyLinearShadowBias(o.pos);
-	${VFXEnd}
+${VFXBegin:VFXVertexAdditionalProcess}
+o.pos = VFXApplyShadowBias(o.pos);
+${VFXEnd}
 		
 	${VFXInclude("Assets/VFXEditor/Shaders/ParticleLines/Pass.template")}	
 		
