--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleLinesSW/PassShadowCaster.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleLinesSW/PassShadowCaster.template
@@ -23,7 +23,7 @@ Pass
 #define VFX_VARYING_ALPHATHRESHOLD builtInInterpolants.x
 		
 	${VFXBegin:VFXVertexAdditionalProcess}
-		o.pos = UnityApplyLinearShadowBias(o.pos);
+		o.pos = VFXApplyShadowBias(o.pos);
 	${VFXEnd}
 		
 	${VFXInclude("Assets/VFXEditor/Shaders/ParticleLinesSW/Pass.template")}	
