--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/VFXInit.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/VFXInit.template
@@ -1,6 +1,7 @@
 #pragma kernel CSMain
 ${VFXGlobalInclude}
 ${VFXGlobalDeclaration}
+${VFXPerPassInclude}
 
 RWByteAddressBuffer attributeBuffer;
 ByteAddressBuffer sourceAttributeBuffer;
