--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleMeshes/PassShadowCaster.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleMeshes/PassShadowCaster.template
@@ -35,6 +35,10 @@ Pass
 ${VFXBegin:VFXVertexAdditionalProcess}
 o.pos = VFXApplyShadowBias(o.pos);
 ${VFXEnd}
+
+// Needed for HDRP
+#define SHADERPASS SHADERPASS_SHADOWS
+#define USE_LEGACY_UNITY_MATRIX_VARIABLES
 		
 	${VFXInclude("Assets/VFXEditor/Shaders/ParticleMeshes/Pass.template")}	
 		
