--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleQuads/Pass.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleQuads/Pass.template
@@ -2,6 +2,9 @@
 #error VFX_VARYING_PS_INPUTS, VFX_VARYING_POSCS and VFX_VARYING_UV must be defined.
 #endif
 
+${VFXPerPassInclude}
+${VFXGeneratedBlockFunction}
+
 ${VFXInclude("Assets/VFXEditor/Shaders/ParticleQuads/PassVS.template"),!USE_GEOMETRY_SHADER}
 ${VFXInclude("Assets/VFXEditor/Shaders/ParticleQuads/PassGS.template"),USE_GEOMETRY_SHADER}
 
