--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleSpheres/PassGBuffer.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/ParticleSpheres/PassGBuffer.template
@@ -60,42 +60,16 @@ o.materialProperties.y = thickness;
 ${VFXEnd}
 	
 	${VFXInclude("Assets/VFXEditor/Shaders/ParticleSpheres/Pass.template")}	
-	
-	#ifdef DEBUG_DISPLAY
-	#include "HDRP/Debug/DebugDisplay.hlsl"
-	#endif
-	#include "HDRP/Material/Material.hlsl"
-	//#include "HDRP/Material/BuiltIn/BuiltInData.cs.hlsl"
-				
+	${VFXInclude("Assets/VFXEditor/Shaders/RenderPipeline/HDRP/VFXLit.template")}
+					
 	#pragma fragment frag
 	void frag(ps_input i, OUTPUT_GBUFFER(outGBuffer), out float oDepth : SV_DepthLessEqual)
 	{
-		SurfaceData surfaceData = (SurfaceData)0;
-		VFXClipSphereAndGetDepthOffsetAndNormal(oDepth, surfaceData.normalWS, i);
-		
-		//BuiltinData builtinData = (BuiltinData)0;
-		//builtinData.opacity = 1.0f;
+		float3 normalWS;
+		VFXClipSphereAndGetDepthOffsetAndNormal(oDepth, normalWS, i);
 				
-		#if HDRP_MATERIAL_TYPE_STANDARD
-		surfaceData.materialFeatures = 1;
-		surfaceData.metallic = i.materialProperties.y;
-		#elif HDRP_MATERIAL_TYPE_SPECULAR
-		surfaceData.materialFeatures = 2;
-		surfaceData.specularColor = i.specularColor;
-		#elif HDRP_MATERIAL_TYPE_TRANSLUCENT
-		surfaceData.materialFeatures = 8;
-		surfaceData.thickness = i.materialProperties.y; 
-		${VFXLoadParameter:{diffusionProfile}}
-		surfaceData.diffusionProfile = diffusionProfile;
-		surfaceData.subsurfaceMask = 1.0f;
-		#endif
-		
-		surfaceData.baseColor = VFXGetFragmentColor(i).xyz;
-		surfaceData.perceptualSmoothness = i.materialProperties.x;
-		surfaceData.specularOcclusion = 1.0f;
-		surfaceData.ambientOcclusion = 1.0f;
-
-		float3 ambient = SampleLightProbes(surfaceData.normalWS);
+		SurfaceData surfaceData = VFXGetSurfaceData(normalWS,i);
+		float3 ambient = VFXGetAmbient(normalWS);
 		
 		ENCODE_INTO_GBUFFER(surfaceData, ambient, i.pos, outGBuffer);
 	}
