--- a/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/RenderPipeline/HDRP/VFXLit.template
+++ b/com.unity.visualeffectgraph/VisualEffectGraph/Shaders/RenderPipeline/HDRP/VFXLit.template
@@ -1,6 +1,6 @@
 #include "Assets/VFXEditor/Shaders/RenderPipeline/HDRP/VFXLit.cginc"
 
-SurfaceData VFXGetSurfaceData(float3 normalWS,VFX_VARYING_PS_INPUTS i)
+SurfaceData VFXGetSurfaceData(float3 normalWS,VFX_VARYING_PS_INPUTS i,float2 uvs = float2(0,0))
 {
 	SurfaceData surfaceData = (SurfaceData)0;
 	
@@ -27,5 +27,17 @@ SurfaceData VFXGetSurfaceData(float3 normalWS,VFX_VARYING_PS_INPUTS i)
 	surfaceData.specularOcclusion = 1.0f;
 	surfaceData.ambientOcclusion = 1.0f;
 	
+	#if HDRP_USE_BASE_COLOR_MAP
+	surfaceData.baseColor *= VFXGetTextureColorWithProceduralUV(VFX_SAMPLER(baseColor),i,uvs);
+	#endif
+	
+	#if HDRP_USE_MASK_MAP
+	float4 mask = VFXGetTextureColorWithProceduralUV(VFX_SAMPLER(maskMap),i,uvs);
+	surfaceData.metallic *= mask.r;
+	surfaceData.ambientOcclusion *= mask.g;
+	surfaceData.perceptualSmoothness *= mask.a;
+	#endif
+	
 	return surfaceData;
 }
+
